--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.18.12",
     "browser-sync-webpack-plugin": "^1.1.4",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.3",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
@@ -29,12 +31,16 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "lodash": "^4.17.4",
+    "mobx": "^3.1.10",
+    "mobx-react": "^4.1.8",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
+    "react-router-dom": "^4.1.1",
     "redbox-react": "^1.3.6",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1",
