--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "deploy": "yarn build && surge ./public --domain brewtab.caro.surge.sh",
+    "deploy": "yarn build && surge ./public --domain brewtab.carodelafuente.surge.sh",
     "start": "webpack-dev-server",
     "prebuild": "rm -f public/index.html public/app-*.js public/vendor-*.js public/screen-*.css",
     "build": "NODE_ENV=production webpack --progress"
@@ -36,6 +36,7 @@
     "mobx": "^3.1.10",
     "mobx-react": "^4.1.8",
     "node-sass": "^4.5.3",
+    "nuka-carousel": "^2.0.4",
     "postcss-loader": "^2.0.5",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
